--- a/index.html
+++ b/index.html
@@ -59,6 +59,46 @@
           </div>
         </div>
       </section>
+      <section class="section2">
+        <div class="wraper3">
+          <div class="wraper3-div1">
+            <div class="small-one">
+              <img src="images/Ellipse 3.png" alt="" />
+              <h3 class="wraper3-h3">Feature one</h3>
+            </div>
+            <p class="wraper3-p1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae beatae pariatur nam temporibus cum neque adipisci,
+              libero ab facere. Quos voluptatem veritatis odio, beatae provident
+              accusantium sit maiores aliquam reprehenderit.
+            </p>
+          </div>
+          <div class="wraper3-div1">
+            <div class="small-one">
+              <img src="images/Ellipse 3.png" alt="" />
+              <h3 class="wraper3-h3">Feature one</h3>
+            </div>
+            <p class="wraper3-p1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae beatae pariatur nam temporibus cum neque adipisci,
+              libero ab facere. Quos voluptatem veritatis odio, beatae provident
+              accusantium sit maiores aliquam reprehenderit.
+            </p>
+          </div>
+          <div class="wraper3-div1">
+            <div class="small-one">
+              <img src="images/Ellipse 3.png" alt="" />
+              <h3 class="wraper3-h3">Feature one</h3>
+            </div>
+            <p class="wraper3-p1">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae beatae pariatur nam temporibus cum neque adipisci,
+              libero ab facere. Quos voluptatem veritatis odio, beatae provident
+              accusantium sit maiores aliquam reprehenderit.
+            </p>
+          </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
