--- a/index.html
+++ b/index.html
@@ -99,6 +99,51 @@
           </div>
         </div>
       </section>
+      <section class="section-block">
+        <div class="section-block-main">
+          <div class="block-left">
+            <picture>
+              <source media="(min-width:1024px)" srcset="images/desktop.png" />
+              <source
+                media="(min-width:744px)"
+                srcset="images/tablet-large.png"
+              />
+              <source
+                media="(min-width:375px)"
+                srcset="images/tablet-small.png"
+              />
+              <img src="images/img-mobile.png" alt="" />
+            </picture>
+          </div>
+          <div class="block-right">
+            <div class="block-h2">
+              <h2 class="all-text">
+                Long headline on two lines to turn your visitors into users and
+                achieve more
+              </h2>
+            </div>
+            <p class="all-text">
+              Separated they live in Bookmarks right at the coast of the famous
+              Semantics, large language ocean
+            </p>
+            <div class="p">
+              <p class="all-text">Showcase and embed your work with</p>
+              <p class="all-text">Sell your videos worldwide</p>
+              <p class="all-text">Publish across social channels in a click</p>
+              <p class="all-text">Embed your work with</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="bg-image">
+            <div class="bgg-text" >
+                <h3 class="bg-h3" >Tagline</h3>
+                <p class="bg-p" >Long headline to turn your visitors into users</p>
+                <div class="action-white" >Action</div>
+            </div>
+        </div>
+      </section>
     </main>
   </body>
 </html>
