--- a/index.html
+++ b/index.html
@@ -137,13 +137,52 @@
       </section>
       <section>
         <div class="bg-image">
-            <div class="bgg-text" >
-                <h3 class="bg-h3" >Tagline</h3>
-                <p class="bg-p" >Long headline to turn your visitors into users</p>
-                <div class="action-white" >Action</div>
-            </div>
+          <div class="bgg-text">
+            <h3 class="bg-h3">Tagline</h3>
+            <p class="bg-p">Long headline to turn your visitors into users</p>
+            <div class="action-white">Action</div>
+          </div>
         </div>
       </section>
     </main>
+    <footer class="footer-bg">
+      <div class="footer-container flex-footer">
+        <div class="logo-footer">
+          <img src="images/Medium length displa.svg" alt="" />
+        </div>
+        <div class="footer-bottom">
+          <div class="box-footer">
+            <h3 class="text h3">First column</h3>
+            <ul>
+              <li class="text text-ul">First page</li>
+              <li class="text text-ul">Second page</li>
+              <li class="text text-ul">Third</li>
+              <li class="text text-ul">Fourth</li>
+            </ul>
+          </div>
+          <div class="box-footer">
+            <h3 class="text h3">Second</h3>
+            <ul>
+              <li class="text text-ul">Fifth page</li>
+              <li class="text text-ul">Sixth page</li>
+              <li class="text text-ul">Eighth</li>
+            </ul>
+          </div>
+          <div class="box-footer">
+            <h3 class="text h3">Third</h3>
+            <ul>
+              <li class="text text-ul">Fifth page</li>
+              <li class="text text-ul">Sixth page</li>
+            </ul>
+          </div>
+          <div class="box-footer active-footer">
+            <h3 class="text h3">Subscribe</h3>
+            <p class="text">
+              Join our newsletter to stay up to date on features and releases
+            </p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
